# Sentinel

./: .gitignore  .ruff.toml  CHANGELOG.md  COMPLETE_SUMMARY.md  CONTRIBUTING.md  IMPLEMENTATION_& _TEST_RESULTS.md  IMPLEMENTATION_STATUS.md  PRODUCTION_HARDENING_SUMMARY.md  QUICK_REFERENCE.md  README.md  conftest.py  demo_new_features.py  mypy.ini  pyproject.toml  ruff_remaining.txt
.github/workflows/: ci.yml  pr-checks.yml  release.yml  security-audit.yml
sentinel/: __init__.py  audit.py  defense.py  demo.py  drift.py  events.py  llm.py  logging_config.py  memory.py  monitor.py  network.py  perception.py  reasoning.py  response.py  review.py  storage.py  sysmon.py  windows_events.py
sentinel_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_events.py  test_new_features.py  test_pipeline.py
tests/fixtures/: incidents_runtime.sqlite3  sample_cloudtrail.jsonl  sample_sysmon.json
